[gd_scene load_steps=39 format=2]

[ext_resource path="res://Enemies/Eye Sphere Sprite Silver B2.png" type="Texture" id=1]
[ext_resource path="res://Shadows/LargeShadow.png" type="Texture" id=2]
[ext_resource path="res://Hitboxes and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Hitboxes and Hurtboxes/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://SoftCollision.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/SecurityDroid.gd" type="Script" id=9]
[ext_resource path="res://Effects/Free Smoke Fx  Pixel 05 copy.png" type="Texture" id=10]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 67, 67 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 67, 0, 67, 67 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 134, 0, 67, 67 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 201, 0, 67, 67 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 67, 67, 67 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 67, 67, 67, 67 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 134, 67, 67, 67 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 201, 67, 67, 67 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 67, 67 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 67, 0, 67, 67 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 134, 0, 67, 67 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 201, 0, 67, 67 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 7.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 18 ), SubResource( 17 ), SubResource( 16 ), SubResource( 16 ), SubResource( 16 ), SubResource( 16 ), SubResource( 16 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=10]
radius = 15.0

[sub_resource type="CapsuleShape2D" id=11]
radius = 18.0

[sub_resource type="CircleShape2D" id=12]
radius = 101.25

[sub_resource type="CapsuleShape2D" id=13]
radius = 18.0

[sub_resource type="CapsuleShape2D" id=14]
radius = 23.0

[sub_resource type="CircleShape2D" id=15]
radius = 38.0

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 10 )
region = Rect2( 320, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 10 )
region = Rect2( 384, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 10 )
region = Rect2( 448, 128, 64, 64 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 10 )
region = Rect2( 512, 896, 64, 64 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 10 )
region = Rect2( 320, 832, 64, 64 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 10 )
region = Rect2( 384, 832, 64, 64 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 10 )
region = Rect2( 448, 832, 64, 64 )

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="SecurityDroid" type="KinematicBody2D"]
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 9 )

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( 0, 35 )
texture = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
animation = "idle"
frame = 10
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 10 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 11 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 5

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 12 )

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
visible = false
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 13 )

[node name="SoftCollision" parent="." instance=ExtResource( 7 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 14 )

[node name="WanderController" parent="." instance=ExtResource( 8 )]

[node name="Hitbox2" parent="." instance=ExtResource( 6 )]
collision_mask = 4
damage = 2

[node name="CollisionShape2D" parent="Hitbox2" index="0"]
shape = SubResource( 15 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Timer2" type="Timer" parent="."]
wait_time = 3.0

[node name="Timer3" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
self_modulate = Color( 0.0588235, 0.423529, 0.92549, 0.423529 )
scale = Vector2( 1.1, 1.1 )
frames = SubResource( 23 )
frame = 2
playing = true

[node name="AnimatedSprite3" type="AnimatedSprite" parent="."]
self_modulate = Color( 0.988235, 0.956863, 0.137255, 0.6 )
position = Vector2( 8.75, -15 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 28 )
frame = 3
playing = true

[node name="AnimatedSprite4" type="AnimatedSprite" parent="."]
self_modulate = Color( 0.988235, 0.956863, 0.137255, 0.6 )
position = Vector2( 5, 16.25 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 28 )
playing = true

[node name="AnimatedSprite5" type="AnimatedSprite" parent="."]
self_modulate = Color( 0.988235, 0.956863, 0.137255, 0.6 )
position = Vector2( -13.75, -3.75 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 28 )
playing = true

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_exited" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
[editable path="Hitbox2"]
